--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <a href="https://cdngloopup.cc/delta_android/" target="_blank">Tải xuống</a>
                 </div>
                 <div class="client-card">
-                    <h3>Krln</h3>
+                    <h3>Krnl</h3>
                     <a href="https://cdnwrd2.com/r/krnl/krnl.apk" target="_blank">Tải xuống</a>
                 </div>
                 <div class="client-card">
@@ -357,7 +357,7 @@
         </div>
 
         <div class="footer">
-            <p>Created By HieuDz - © 2025</p>
+            <p>Created By HieuDz * Ducknovis- © 2025</p>
             <div class="discord-buttons">
                 <a href="https://discord.gg/3yRgPWxFPN" target="_blank" class="discord-btn">Discord Chính</a>
                 <a href="https://discord.gg/qUgx8PnJu9" target="_blank" class="discord-btn">Discord Phụ</a>
