--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                     <a href="https://cdngloopup.cc/delta_android/" target="_blank">Tải xuống</a>
                 </div>
                 <div class="client-card">
-                    <h3>Krnl</h3>
+                    <h3>Krnl Quốc Tế + VNG</h3>
                     <img src="https://i.imgur.com/1aU7j1t.png" alt="Krnl Preview">
-                    <a href="https://cdnwrd2.com/r/krnl/krnl.apk" target="_blank">Tải xuống</a>
+                    <a href="https://wearedevs.net/d/Krnl" target="_blank">Tải xuống</a>
                 </div>
                 <div class="client-card">
                     <h3>Fluxus</h3>
