Cập nhật client từ tool tự động

--- a/index.html
+++ b/index.html
@@ -426,6 +426,12 @@
             <h2>Client Roblox Quốc Tế (Tự động cập nhật)</h2>
             <div class="client-list" id="internationalClients">
                 <div class="client-card">
+                    <h3>Delta</h3>
+                    <img src="https://i.imgur.com/38YY1qD.png" alt="Delta Preview">
+                    <a href="https://deltaexecutor.filesadda.com/Delta-v2.665.apk" target="_blank">Tải xuống</a>
+                </div>
+    
+                <div class="client-card">
                     <h3>Krnl</h3>
                     <img src="https://i.imgur.com/1aU7j1t.png" alt="Krnl Preview">
                     <a href="https://www.mediafire.com/file/enngec88y4bfd2u/Krnl_2.663.660_Official.apk/file" target="_blank">Tải xuống</a>
